ref(api): de-google-ify stuff by removing some commons usage where unnecessary
Goal is to remove Google Commons/Guava as a dependency as it significantly increases the sizes of some JARs for minimal benefit.